# Shared-Object-Challenge

./: .gitignore  README.md  build.sh
challenge/: .flake8  README.md  compile.py  main.c  py-to-pyx.sh  pyproject.toml  setup.py
challenge/processor/: csv_processor.py
challenge/processor/ingestor/: ingestor.py
challenge/processor/processor/: comparison.py  comparison_factory.py  comparison_type_enum.py  filter.py  processor.py
challenge/processor/serializer/: serializer.py
challenge/processor/transformer/: lexer.py  transformer.py  transformer_strategy.py
challenge/processor_py/: filter.py  lexer.py  processor.py  serializer.py
challenge/processor_pyx/: filter.pyx  lexer.pyx  processor.pyx  serializer.pyx
challenge/tests/: conftest.py  test_imports.py  test_ingestor.py  test_lexer.py  test_transformer.py  test_transformer_csv_strategy.py
challenge/tests/integration/: test_column_selection.py  test_filters.py  test_processing.py
challenge/tests/mocks/: mock.csv
challenge/tests/unitary/: test_processor.py
challenge/tests/unitary_processor_deprecated/: comparison_factory.py  filter.py  serializer.py  test_comparison.py  transformer.py
challenge/tests/unitary_processor_py/: test_filter.py  test_lexer.py
