[tool.poetry]
name = "processor_py"
version = "0.1.0"
description = ""
authors = ["Rodolfo Martins <rodolfojr94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cython = "^3.0.10"
setuptools = "^70.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
black = "^24.4.2"
flake8 = "^7.1.0"
mypy = "^1.10.1"
pytest-mock = "^3.14.0"

cython-lint = "^0.16.2"
[tool.black]
exclude = ".venv"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=processor_py --cov-report=term-missing --cov-report=html"
testpaths = [
    "tests",
]


[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = "tests/"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
compile = "compile:main"